[gd_scene load_steps=29 format=3 uid="uid://dmnrjisvbh3f2"]

[ext_resource type="Texture2D" uid="uid://tn7nnv1teg68" path="res://raw_assets/unnamed.png" id="1_ibkli"]
[ext_resource type="Script" uid="uid://wp4bxhujcbjw" path="res://scenes/game/game.gd" id="1_qbsmt"]
[ext_resource type="Texture2D" uid="uid://y4ghg5oprov2" path="res://raw_assets/nature_area_1/Layer8.png" id="2_pbrru"]
[ext_resource type="Script" uid="uid://d2pswju2bn6cj" path="res://scenes/game/rabbit.gd" id="3_7qcb4"]
[ext_resource type="PackedScene" uid="uid://b4snu3q5qf1ej" path="res://scenes/hud/HUD.tscn" id="3_365ku"]
[ext_resource type="Texture2D" uid="uid://c5ic6w7q15vhw" path="res://raw_assets/nature_area_1/ground.png" id="3_aptqa"]
[ext_resource type="Script" uid="uid://1qnw58u527ue" path="res://scenes/game/animal_handler.gd" id="3_lyhax"]
[ext_resource type="Texture2D" uid="uid://bsegndqkdoksi" path="res://raw_assets/nature_area_1/lehtipuu.png" id="4_5xhyk"]
[ext_resource type="Texture2D" uid="uid://cthll1au3203" path="res://raw_assets/nature_area_1/puu.png" id="4_56wml"]
[ext_resource type="PackedScene" uid="uid://b47f3tc3t7m22" path="res://scenes/animals/Jackrabbit.tscn" id="4_lyhax"]
[ext_resource type="PackedScene" uid="uid://dpehdwjry55g8" path="res://scenes/game/sprites/Pond.tscn" id="5_60iot"]
[ext_resource type="PackedScene" uid="uid://b0ir7bhnmqyil" path="res://scenes/game/sprites/Tree.tscn" id="5_aptqa"]
[ext_resource type="Script" uid="uid://cjr2su04vk3dv" path="res://scenes/game/camera_2d.gd" id="7_gg4pt"]
[ext_resource type="Texture2D" uid="uid://dc6kdwkd2ylnr" path="res://raw_assets/photoview.png" id="7_wnrko"]
[ext_resource type="PackedScene" uid="uid://blc8hopw0gl1w" path="res://scenes/game/sprites/ReedsRight.tscn" id="8_7st5e"]
[ext_resource type="Texture2D" uid="uid://dnjkq0qxw6klu" path="res://raw_assets/nature_area_1/dirt.png" id="9_ysuoy"]
[ext_resource type="Texture2D" uid="uid://44hii4wrnvdh" path="res://raw_assets/nature_area_1/rock1.png" id="10_6k07o"]
[ext_resource type="Script" uid="uid://h05tf622dhpg" path="res://scenes/game/weather_handler.gd" id="11_2iokk"]
[ext_resource type="PackedScene" uid="uid://mrpiiwbr15yd" path="res://scenes/game/weather/FogEffect.tscn" id="11_5xhyk"]
[ext_resource type="Texture2D" uid="uid://dtrtjorup4btk" path="res://raw_assets/nature_area_1/bush.png" id="11_7st5e"]
[ext_resource type="PackedScene" uid="uid://dns276quy136i" path="res://scenes/game/sprites/ReedsLeft.tscn" id="11_olhyc"]
[ext_resource type="PackedScene" uid="uid://cfg4adnk4ac87" path="res://scenes/game/weather/RainEffect.tscn" id="12_vg8p7"]
[ext_resource type="Texture2D" uid="uid://griqu7yhlrb2" path="res://raw_assets/nature_area_1/rock2.png" id="13_ib0i5"]

[sub_resource type="Animation" id="Animation_15ccc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_084i0"]
resource_name = "sun_cycle"
length = 24.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 10.033334, 14.1, 18.049772, 24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.93, 0.84816, 0.7254, 1), Color(0.92, 0.73278, 0.61639994, 1), Color(0.9879686, 0.59524447, 0.8109, 1), Color(0.77577305, 0.53637356, 0.77658916, 1), Color(0.1254902, 0.3137255, 0.5294118, 1), Color(0.09449999, 0.2604, 0.45, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xs462"]
_data = {
&"RESET": SubResource("Animation_15ccc"),
&"sun_cycle": SubResource("Animation_084i0")
}

[sub_resource type="Curve2D" id="Curve2D_365ku"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 861, 776, 0, 0, 0, 0, 544, 469, 0, 0, 0, 0, 271, 506, 0, 0, 0, 0, -526, 733)
}
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnrko"]
size = Vector2(359, 235)

[node name="Game" type="Node2D" node_paths=PackedStringArray("day_cycle")]
script = ExtResource("1_qbsmt")
day_cycle = NodePath("Background/DayNightCycle/AnimationPlayer")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -3.0517578e-05
offset_right = 1151.0
offset_bottom = 647.0

[node name="DayNightCycle" type="CanvasModulate" parent="Background"]
position = Vector2(0, -3.0517578e-05)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/DayNightCycle"]
libraries = {
&"": SubResource("AnimationLibrary_xs462")
}
speed_scale = 0.5

[node name="SkyColor" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -95.99997
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6901961, 0.9098039, 1, 1)
metadata/_edit_lock_ = true

[node name="BgMounds" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 583.0
offset_top = -6.9999695
offset_right = 1251.0
offset_bottom = 397.00003
texture = ExtResource("2_pbrru")
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="BgMounds2" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0000305
offset_right = 656.0
offset_bottom = 333.00003
texture = ExtResource("2_pbrru")
stretch_mode = 5
flip_h = true
metadata/_edit_lock_ = true

[node name="BgPic" type="TextureRect" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0517578e-05
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ibkli")
expand_mode = 2
stretch_mode = 5

[node name="Ground" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = -66.0
offset_top = 191.00003
offset_right = 1221.0
offset_bottom = 731.0
texture = ExtResource("3_aptqa")
metadata/_edit_lock_ = true

[node name="OakStill" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = -114.0
offset_top = -41.99997
offset_right = 291.0
offset_bottom = 397.00003
texture = ExtResource("4_5xhyk")
expand_mode = 1
stretch_mode = 5

[node name="Tree" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 866.0
offset_top = -9.9999695
offset_right = 1065.0
offset_bottom = 302.00003
texture = ExtResource("4_56wml")
expand_mode = 1
stretch_mode = 5

[node name="OakStill2" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 623.0
offset_top = -122.99997
offset_right = 1016.0
offset_bottom = 306.00003
texture = ExtResource("4_5xhyk")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Tree4" parent="Background" instance=ExtResource("5_aptqa")]
position = Vector2(216, 212.00003)

[node name="Tree5" parent="Background" instance=ExtResource("5_aptqa")]
position = Vector2(1092, 147.00003)

[node name="Tree3" parent="Background" instance=ExtResource("5_aptqa")]
position = Vector2(35.000004, 277.00006)
scale = Vector2(1.3, 1.3)

[node name="ReedsRight2" parent="Background" instance=ExtResource("8_7st5e")]
position = Vector2(667, 208.00003)

[node name="Pond" parent="Background" instance=ExtResource("5_60iot")]
position = Vector2(888, 491.00003)
metadata/_edit_lock_ = true

[node name="Dirt" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 623.0
offset_top = 441.00003
offset_right = 937.0
offset_bottom = 679.0
texture = ExtResource("9_ysuoy")
metadata/_edit_lock_ = true

[node name="ReedsLeft2" parent="Background" instance=ExtResource("11_olhyc")]
position = Vector2(532, 286.00003)

[node name="Rock1" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 505.0
offset_top = 377.00003
offset_right = 643.0
offset_bottom = 453.00003
texture = ExtResource("10_6k07o")
expand_mode = 1
stretch_mode = 5

[node name="Rock2" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 880.0
offset_top = 590.0
offset_right = 1018.0
offset_bottom = 666.0
texture = ExtResource("10_6k07o")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="RockB" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 590.0
offset_top = 406.00003
offset_right = 707.0
offset_bottom = 477.0
texture = ExtResource("13_ib0i5")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect8" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimalHandler" type="Node2D" parent="."]
script = ExtResource("3_lyhax")

[node name="Rabbit" type="Node2D" parent="AnimalHandler"]
script = ExtResource("3_7qcb4")
metadata/_edit_lock_ = true

[node name="RabbitPath" type="Path2D" parent="AnimalHandler/Rabbit"]
curve = SubResource("Curve2D_365ku")

[node name="PathFollow2D" type="PathFollow2D" parent="AnimalHandler/Rabbit/RabbitPath"]
position = Vector2(861, 776)
rotation = -3.1148431
rotates = false

[node name="JackrabbitSprite" parent="AnimalHandler/Rabbit/RabbitPath/PathFollow2D" instance=ExtResource("4_lyhax")]
position = Vector2(39.22676, 7.9536743)
rotation = 3.1148431

[node name="RabbitTimer" type="Timer" parent="AnimalHandler/Rabbit"]
process_callback = 0
one_shot = true

[node name="Foreground" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Bush1" type="TextureRect" parent="Foreground"]
layout_mode = 0
offset_left = 928.0
offset_top = 441.0
offset_right = 1357.0
offset_bottom = 723.0
texture = ExtResource("11_7st5e")
stretch_mode = 5

[node name="Bush2" type="TextureRect" parent="Foreground"]
layout_mode = 0
offset_left = -92.0
offset_top = 415.0
offset_right = 337.0
offset_bottom = 697.0
texture = ExtResource("11_7st5e")
stretch_mode = 5
flip_h = true
metadata/_edit_lock_ = true

[node name="WeatherHandler" type="Node2D" parent="." node_paths=PackedStringArray("fog", "rain")]
script = ExtResource("11_2iokk")
fog = NodePath("FogEffect")
rain = NodePath("RainEffect")

[node name="WeatherTimer" type="Timer" parent="WeatherHandler"]

[node name="RainEffect" parent="WeatherHandler" instance=ExtResource("12_vg8p7")]
visible = false

[node name="FogEffect" parent="WeatherHandler" instance=ExtResource("11_5xhyk")]
visible = false
modulate = Color(1, 1, 1, 0.627451)
position = Vector2(0, -10)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("camera_overlay")]
process_mode = 3
anchor_mode = 0
limit_left = -100
limit_top = -100
limit_right = 500
limit_bottom = 300
script = ExtResource("7_gg4pt")
camera_overlay = NodePath("../CanvasLayer/CameraOverlay")

[node name="Area2D" type="Area2D" parent="Camera2D"]
visible = false
position = Vector2(286, 118)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D"]
position = Vector2(291.5, 205.5)
shape = SubResource("RectangleShape2D_wnrko")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TargetView" type="ColorRect" parent="CanvasLayer"]
offset_left = 286.0
offset_top = 118.0
offset_right = 866.0
offset_bottom = 531.0
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="CameraOverlay" type="HBoxContainer" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CameraOverlay"]
custom_minimum_size = Vector2(1200, 840)
layout_mode = 2
texture = ExtResource("7_wnrko")
expand_mode = 1
stretch_mode = 5

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_365ku")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 1

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(-6, 9)
energy = 0.2
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.7254902)
height = 1.0

[connection signal="timeout" from="AnimalHandler/Rabbit/RabbitTimer" to="AnimalHandler/Rabbit" method="_on_rabbit_timer_timeout"]
[connection signal="timeout" from="WeatherHandler/WeatherTimer" to="WeatherHandler" method="_on_weather_timer_timeout"]
